# MicroRTSCppPy

MicroRTS_cpp/: ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MicroRTS_CPP.sln  MicroRTScpp.vcxproj  MicroRTScpp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  exp2.vcxproj  exp2.vcxproj.filters  main2.cpp
MicroRTS_cpp/MicroRTScpp.dir/Release/MicroRTScpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
MicroRTS_cpp/Release/: MicroRTScpp.lib  MicroRTSpy.cp311-win_amd64.pyd
MicroRTS_cpp/exp2.dir/Release/: exp2.exe.recipe
MicroRTS_cpp/exp2.dir/Release/exp2.tlog/: CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MicroRTS_cpp/include/: AStarPathFinding.h  GameState.h  PhysicalGameState.h  Player.h  PlayerAction.h  ResourceUsage.h  Unit.h  UnitAction.h  UnitActionAssignment.h  UnitType.h
MicroRTS_cpp/src/cpp/: AStarPathFinding.cpp  GameState.cpp  PhysicalGameState.cpp  Player.cpp  PlayerAction.cpp  ResourceUsage.cpp  Unit.cpp  UnitAction.cpp  UnitActionAssignment.cpp  UnitType.cpp
MicroRTS_cpp/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
MicroRTS_cpp/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
MicroRTS_cpp/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
bind/nanobind/: nanobind.cpp
(+56 files in other folders)
